--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["kurrbanov <justnick1312@gmail.com>"]
 python = "^3.8"
 Django = "^3.2.6"
 psycopg2 = "^2.9.1"
+python-decouple = "^3.4"
 
 [tool.poetry.dev-dependencies]
 
